# Onegin

./: .gitignore  CMakeLists.txt  fileLib.cpp  fileLib.h  main.cpp  onegin.txt.bk  oneginMixerLib.cpp  oneginMixerLib.h  oneginSorterLib.cpp  oneginSorterLib.h  out.txt  text.cpp  text.h  text.txt
